--- a/index.html
+++ b/index.html
@@ -4,9 +4,95 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>包太雷</title>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="main.css">
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" 
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" 
+    integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" 
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="books/books.js"></script>
+  <script src="util.js"></script>
+
+  <title>Alpha Space</title>
 </head>
+
 <body>
-  Welcome!
+  <header class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="#">包</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link active" href="#">主页</a></li>
+        <li class="nav-item"><a class="nav-link" href="books/books.html">读书</a></li>
+        <li class="nav-item"><a class="nav-link" href="go/go.html">围棋</a></li>
+        <li class="nav-item"><a class="nav-link" href="tech/tech.html">电脑</a></li>
+        <li class="nav-item"><a class="nav-link" href="life/life.html">生活</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <div class="container">
+
+    <div class="my-3 p-3 title">
+      <h1 class="lh-100">包太雷</h1>
+      <div class="text-muted">Alpha Space</div>
+    </div>
+
+    <div id="book-list" class="my-3 p-3 bg-white border rounded shadow-sm">
+      <div class="media py-3 border-bottom border-gray">
+        <span class="col-icon text-white">书</span>
+        <h4 class="col-header">书山有路</h4>
+      </div>
+
+      <list-item v-for="item in items" v-bind:item="item" v-bind:key="item.title"></list-item>
+
+      <small class="d-block text-right mt-3">
+        <a href="books/books.html">更多</a>
+      </small>
+    </div>
+
+  </div>
+
+  <script>
+    $(function() {
+      Vue.component('list-item', {
+        props: ['item'],
+        template: '<div class="media justify-content-between py-3 border-bottom border-gray">' +
+                  '  <span class="text-gray-dark"><a :href="item.link">{{ item.title }}</a></span>' +
+                  '  <small>{{ item.date }}</small>' +
+                  '</div>'
+      });
+
+      var bookList = new Vue({
+        el: '#book-list',
+        data: function() {
+          var items = [],
+              list = util.sortByCol(books.listWithReviews(), books.colMap.get('阅毕'), true);
+
+          list = list.slice(0, Math.min(3, list.length));
+          list.forEach(e => {
+            var book = {};
+            book.title = e[books.colMap.get('书名')],
+            book.date = e[books.colMap.get('阅毕')],
+            book.link = `books/${e[books.colMap.get('链接')]}.html`;
+            items.push(book);
+          });
+
+          return {items: items};
+        }
+      });
+    });
+  </script>
 </body>
 </html>
