--- a/books/books.html
+++ b/books/books.html
@@ -20,27 +20,20 @@
     integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" 
     crossorigin="anonymous"></script>
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+
+  <script src="../nav.js"></script>
   <script src="books.js"></script>
-  <script src="../util.js"></script>
 
   <title>Books</title>
 </head>
 
 <body>
-  <header class="navbar navbar-expand-md navbar-light bg-light">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="../index.html">主页</a></li>
-        <li class="nav-item"><a class="nav-link active" href="#">读书</a></li>
-        <li class="nav-item"><a class="nav-link" href="../go/go.html">围棋</a></li>
-        <li class="nav-item"><a class="nav-link" href="../tech/tech.html">电脑</a></li>
-        <li class="nav-item"><a class="nav-link" href="../life/life.html">生活</a></li>
-      </ul>
-    </div>
-  </header>
+  <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
   <div class="container">
-    <h1 class="title">包太雷书架</h1>
+    <div class="m-5 p-5 title">
+      <h1>包太雷书架</h1>
+    </div>
     
     <blockquote>
       <p>朝闻道，夕死可矣。</p>
@@ -83,6 +76,8 @@
 
   <script>
     $(function() {
+      $('header.navbar').append(bao.nav.getNavbar('读书', 1));
+
       var catCol = 0,
           titleCol = 2,
           yearCol = 4,
@@ -108,20 +103,20 @@
           }, {
             targets: [titleCol],
             render: function(data, type, row) {
-              return books.getReviewLinks(data, row);
+              return bao.books.getReviewLinks(data, row);
             }
           }
         ],
-        data: books.list,
+        data: bao.books.list,
         drawCallback: function() {
           var api = this.api(),
               rows = api.rows({page: 'current'});
 
           //books.group(api, rows);
-          books.setTitles(api, rows);
+          bao.books.setTitles(api, rows);
         },
         initComplete : function() {
-          books.addColSelect(this.api(), catCol);
+          bao.books.addColSelect(this.api(), catCol);
         },
         language: {
           url: "https://cdn.datatables.net/plug-ins/1.10.19/i18n/Chinese.json"
