--- a/books/economics_one_lesson/eol.html
+++ b/books/economics_one_lesson/eol.html
@@ -8,21 +8,26 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
   crossorigin="anonymous">
+  <link rel="stylesheet" href="../../main.css">
   <link rel="stylesheet" href="../books.css">
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" 
+    crossorigin="anonymous"></script>
+  <script src="../../nav.js"></script>
 
   <title>Economics in One Lesson</title>
 </head>
 
-<body class="container">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="../books.html">书目</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Economics in One Lesson</li>
-    </ol>
-  </nav>
+<body>
+  <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
-  <h1 class="title">Economics in One Lesson</h1>
-  <div class="author">赫兹利特 (Henry S. Hazlitt, 1894--1993)</div>
+  <div class="container">
+
+  <div class="m-3 p-3 title">
+    <h1>Economics in One Lesson</h1>
+    <div class="author">赫兹利特 (Henry S. Hazlitt, 1894--1993)</div>
+  </div>
 
   <table class="figures">
     <tr>
@@ -135,6 +140,12 @@
       <a id="hazlitt" href="https://en.wikipedia.org/wiki/Henry_Hazlitt">维基百科 赫兹利特</a>
     </li>
   </ol>
+
+  </div> <!-- container -->
+
+  <script>
+    $('header.navbar').append(bao.nav.getNavbar('读书', 2));
+  </script>
 
 </body>
 </html>
