--- a/books/guwen/gw.html
+++ b/books/guwen/gw.html
@@ -8,21 +8,26 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
     crossorigin="anonymous">
+  <link rel="stylesheet" href="../../main.css">
   <link rel="stylesheet" href="../books.css">
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" 
+    crossorigin="anonymous"></script>
+  <script src="../../nav.js"></script>
 
   <title>古文观止</title>
 </head>
 
-<body class="container">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="../books.html">书目</a></li>
-      <li class="breadcrumb-item active" aria-current="page">古文观止</li>
-    </ol>
-  </nav>
+<body>
+  <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
-  <h1 class="title">古文观止</h1>
-  <div class="author">吴楚才 吴调侯 编</div>
+  <div class="container">
+
+  <div class="m-3 p-3 title">
+    <h1>古文观止</h1>
+    <div class="author">吴楚才 吴调侯 编</div>
+  </div>
 
   <figure class="text-center">
     <img class="figure-img img-fluid rounded" src="1203587337-1_w_3.jpg" alt="古文观止">
@@ -196,6 +201,12 @@
   <ol>
     <li><a id="dangdang-gw" href="http://product.dangdang.com/1203587337.html">当当 古文观止</a></li>
   </ol>
+
+  </div> <!-- container -->
+
+  <script>
+    $('header.navbar').append(bao.nav.getNavbar('读书', 2));
+  </script>
 
 </body>
 </html>
