--- a/books/intelligent_investor/ii.html
+++ b/books/intelligent_investor/ii.html
@@ -8,21 +8,26 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
     crossorigin="anonymous">
+  <link rel="stylesheet" href="../../main.css">
   <link rel="stylesheet" href="../books.css">
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" 
+    crossorigin="anonymous"></script>
+  <script src="../../nav.js"></script>
 
   <title>The Intelligent Investor</title>
 </head>
 
-<body class="container">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="../books.html">书目</a></li>
-      <li class="breadcrumb-item active" aria-current="page">The Intelligent Investor</li>
-    </ol>
-  </nav>
+<body>
+  <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
-  <h1 class="title">The Intelligent Investor</h1>
-  <div class="author">本杰明·葛拉汉 (Benjamin Graham, 1894--1976) 著<br>Jason Zweig 注解</div>
+  <div class="container">
+
+  <div class="m-3 p-3 title">
+    <h1>The Intelligent Investor</h1>
+    <div class="author">本杰明·葛拉汉 (Benjamin Graham, 1894--1976) 著<br>Jason Zweig 注解</div>
+  </div>
 
   <blockquote>
     <p>神奇卓异非智人 智人只是常。</p>
@@ -226,6 +231,12 @@
       <a id="intelligent-investor-1949" href="https://en.wikipedia.org/wiki/The_Intelligent_Investor">维基百科 Intelligent Investor</a>
     </li>
   </ol>
+
+  </div> <!-- container -->
+
+  <script>
+    $('header.navbar').append(bao.nav.getNavbar('读书', 2));
+  </script>
   
 </body>
 </html>
