--- a/books/tangshi_300/t300.html
+++ b/books/tangshi_300/t300.html
@@ -8,21 +8,26 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
     crossorigin="anonymous">
+  <link rel="stylesheet" href="../../main.css">
   <link rel="stylesheet" href="../books.css">
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" 
+    crossorigin="anonymous"></script>
+  <script src="../../nav.js"></script>
 
   <title>唐诗三百首</title>
 </head>
 
-<body class="container">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="../books.html">书目</a></li>
-      <li class="breadcrumb-item active" aria-current="page">唐诗三百首</li>
-    </ol>
-  </nav>
+<body>
+  <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
-  <h1 class="title">唐诗三百首</h1>
-  <div class="author">孙洙编 陈婉俊补注 宋慧点校</div>
+  <div class="container">
+
+  <div class="m-3 p-3 title">
+    <h1>唐诗三百首</h1>
+    <div class="author">孙洙编 陈婉俊补注 宋慧点校</div>
+  </div>
 
   <h2>2015年12月笔记</h2>
 
@@ -79,6 +84,12 @@
       <a id="t300-2003" href="https://book.douban.com/subject/1140194/">豆瓣 唐诗三百首补注</a>
     </li>
   </ol>
+
+  </div> <!-- container -->
+
+  <script>
+    $('header.navbar').append(bao.nav.getNavbar('读书', 2));
+  </script>
 
 </body>
 </html>
