--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <div id="book-news" class="my-3 p-3 bg-white border rounded shadow-sm">
       <div class="media py-3 border-bottom border-gray">
-        <span class="section-icon bg-success">书</span>
-        <h5 class="section-header">山有路</h5>
+        <span class="section-icon">📖</span>
+        <h5 class="section-header">书山有路</h5>
       </div>
 
       <news-item v-for="item in news" v-bind:item="item" v-bind:key="item.title"></news-item>
@@ -52,9 +52,8 @@
 
     <div id="go-news" class="my-3 p-3 bg-white border rounded shadow-sm">
       <div class="media py-3 border-bottom border-gray">
-        <h5 class="section-header">围</h5>
-        <span class="section-icon bg-black">棋</span>
-        <h5 class="section-header">天地</h5>
+        <span class="section-icon">⚪</span>
+        <h5 class="section-header">围棋天地</h5>
       </div>
   
       <news-item v-for="item in news" v-bind:item="item" v-bind:key="item.title"></news-item>
@@ -62,9 +61,17 @@
   
     <div id="tech-news" class="my-3 p-3 bg-white border rounded shadow-sm">
       <div class="media py-3 border-bottom border-gray">
-        <h5 class="section-header">电脑</h5>
-        <span class="section-icon bg-primary">技</span>
-        <h5 class="section-header">术</h5>
+        <span class="section-icon">💻</span>
+        <h5 class="section-header">电脑技术</h5>
+      </div>
+
+      <news-item v-for="item in news" v-bind:item="item" v-bind:key="item.title"></news-item>
+    </div>
+
+    <div id="tech-news" class="my-3 p-3 bg-white border rounded shadow-sm">
+      <div class="media py-3 border-bottom border-gray">
+        <span class="section-icon">🌎</span>
+        <h5 class="section-header">国计民生</h5>
       </div>
 
       <news-item v-for="item in news" v-bind:item="item" v-bind:key="item.title"></news-item>
