--- a/life/life.html
+++ b/life/life.html
@@ -24,14 +24,14 @@
 
   <div class="container">
     <div class="m-5 p-5 title">
-      <h1>生活</h1>
+      <h1>国计民生</h1>
       <div class="text-muted">Life coming soon</div>
     </div>
 
   </div>
 
   <script>
-    $('header.navbar').append(bao.nav.getNavbar('生活', 1));
+    $('header.navbar').append(bao.nav.getNavbar('民生', 1));
   </script>
 
 </body>
