--- a/books/sapiens/sapiens.html
+++ b/books/sapiens/sapiens.html
@@ -55,7 +55,7 @@
 
   <h2 class="part">认知革命</h2>
 
-  <table class="table table-sm table-striped">
+  <table class="table table-sm table-striped" style="width: 600px; margin: 3rem auto;">
     <caption>人类进化时间</caption>
     <thead>
       <th>时间</th>
@@ -65,22 +65,22 @@
     <tbody>
       <tr>
         <td class="text-right">200万年前</td>
-        <td class="text-center">非洲</td>
+        <td>非洲</td>
         <td>南方古猿进化成人属(Homo)</td>
       </tr>
       <tr>
         <td class="text-right">190万年前</td>
-        <td class="text-center">东亚</td>
+        <td>东亚</td>
         <td>出现直人(Homo erectus)</td>
       </tr>
       <tr>
         <td class="text-right">25万年前</td>
-        <td class="text-center">欧洲和西亚</td>
+        <td>欧洲和西亚</td>
         <td>出现尼人(Homo neanderthals)</td>
       </tr>
       <tr>
         <td class="text-right">15万年前</td>
-        <td class="text-center">非洲</td>
+        <td>非洲</td>
         <td>出现智人(Homo sapiens)</td>
       </tr>
     </tbody>
