--- a/life/us_weather.html
+++ b/life/us_weather.html
@@ -41,7 +41,7 @@
     <p>舒适是一个主观的概念，笔者认为冬天温度在零度以上都可以接受，夏天温度在30度以下也可以接受。本文把一月平均低温低于零度的值和七月平均高温高于30度的值相加，称其为偏差；偏差较小，该地区就较舒适。气候指数表示该地区比多少百分比的其他地区温度偏差更小。比如有20多个城市的气候指数为一百分，他们的偏差都是零；零分的费尔班克斯是温度偏差最大的地区。加州有十多个城市一百分，宝地啊，可惜郑和没有到达。</p>
 
     <div class="datatable-wrapper" style="width: 800px">
-      <table id="weather-table" class="compact display" width="100%"></table>
+      <table id="weather-table" class="compact display"></table>
     </div>
     
   </div>
@@ -49,6 +49,8 @@
   <script>
     $(() => {
       $('header.navbar').append(bao.nav.getNavbar('民生', 1));
+
+      $('#weather-table').append(bao.util.getColFoot(bao.life.us_weather.cols));
 
       var table = $('#weather-table').DataTable({
         columns: bao.life.us_weather.cols,
